[gd_scene load_steps=9 format=3 uid="uid://bxd5lxdpp7hgw"]

[ext_resource type="Script" uid="uid://bqbs38032hk0s" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bgft7vt8a2x53" path="res://scenes/food.tscn" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://ip08dmhil67q" path="res://scenes/hud.tscn" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://b17dtgkxcsgwv" path="res://scenes/snake.tscn" id="4_u5sy4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jyhfs"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tbgi4"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tefeu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o6xl0"]
normal = Vector2(0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_lbhrr")
food_scene = ExtResource("2_iywne")

[node name="HUD" parent="." instance=ExtResource("3_p57ef")]

[node name="FoodTimer" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="Walls" type="Node2D" parent="."]

[node name="Left" type="Area2D" parent="Walls"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2(0, 144)
shape = SubResource("WorldBoundaryShape2D_jyhfs")

[node name="Right" type="Area2D" parent="Walls"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2(1152, 80)
shape = SubResource("WorldBoundaryShape2D_tbgi4")

[node name="Bottom" type="Area2D" parent="Walls"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
position = Vector2(176, 648)
shape = SubResource("WorldBoundaryShape2D_tefeu")

[node name="Top" type="Area2D" parent="Walls"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
position = Vector2(384, 0)
shape = SubResource("WorldBoundaryShape2D_o6xl0")

[node name="Food" type="Node2D" parent="."]

[node name="Food" parent="Food" instance=ExtResource("2_iywne")]

[node name="Snake" parent="." instance=ExtResource("4_u5sy4")]

[connection signal="increase_speed_multiplier" from="." to="Snake" method="_on_main_increase_speed_multiplier"]
[connection signal="timeout" from="FoodTimer" to="." method="_on_food_timer_timeout"]
[connection signal="body_entered" from="Walls/Left" to="Snake" method="_on_any_wall_body_entered"]
[connection signal="body_entered" from="Walls/Right" to="Snake" method="_on_any_wall_body_entered"]
[connection signal="body_entered" from="Walls/Bottom" to="Snake" method="_on_any_wall_body_entered"]
[connection signal="body_entered" from="Walls/Top" to="Snake" method="_on_any_wall_body_entered"]
[connection signal="food_signal" from="Food/Food" to="." method="_on_food_food_signal"]
[connection signal="gameover_signal" from="Snake" to="." method="_on_snake_gameover_signal"]
